finished a basic version of file uploading and dynamic scheduling

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -81,6 +81,9 @@
                     <div class="uploadIcon"></div>
                     <input type="file" class="fileUpload" accept=".json"></input>
                   </div>
+                  <div class="resetDiv">
+                    <div class="resetIcon"></div>
+                  </div>
                 </div>
                 <div class="classBar">
                   <div class="classDisplay"><span class="classText">114</span></div>
