--- a/pages/view/styles.css
+++ b/pages/view/styles.css
@@ -245,7 +245,7 @@ html {
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 100%;
+    width: 50%;
     right: 0px;
     border-radius: 5px;
     align-items: center;
@@ -280,6 +280,50 @@ html {
     transition: transform 0.5s ease;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+
+  .resetDiv{
+    width: auto;
+    aspect-ratio: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 50%;
+    right: 0px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 35px;
+    padding: 5;
+    background-color: rgba(255, 255, 255, 0);
+    transition: box-shadow 0.1s ease;
+    box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.2), 
+    inset 1px 1px 2px rgba(255, 255, 255, 0.1),
+        2px 2px 2px rgba(0, 0, 0, 0.2), 
+        -2px -2px 2px rgba(255, 255, 255, 0.1);
+  }
+  
+  .resetDiv:active{
+    box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.2), 
+    inset -1px -1px 2px rgba(255, 255, 255, 0.1),
+        -2px -2px 1px rgba(0, 0, 0, 0.2), 
+        2px 2px 1px rgba(255, 255, 255, 0.1);
+  }
+  
+  .resetIcon{
+    flex-shrink: 0;
+    aspect-ratio: 1;
+    height: 70%;
+    min-width: 10px;
+    background: url("images/trash.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    transition: transform 0.5s ease;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
   
   .fileUpload{
     display: none;
@@ -818,6 +862,7 @@ html {
     opacity: 1;
     position: relative;
     overflow: hidden;
+    display: flex;
     background: var(--og-dark-2);
     border-radius: 10px;
     box-shadow: var(--box-shadow2);
