Attempting to fix the issue with the CSS/html of the popup asw as the clicking logic issues

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -163,14 +163,16 @@
     <!--NEW POPUP!!-->
     <div class="requirementsPopUp schedulePopUp">
       <div class="popupFrame">
-        <div class="teacherFlex">
-          <div class="popupX">
-            <div class="popupXImage"></div>
-          </div>
-        </div>
         <div class="courseIconFlex">
           <div class="requirementsList">
-            <span class="popupText" style="font-size: 14px; margin-bottom: 8px;">CORE REQUIREMENTS</span>
+            <span class="popupText" style="font-size: 14px; margin-bottom: 8px;">CORE REQUIREMENTS
+              <div class="teacherFlex">
+                <div class="popupX2">
+                  <div class="popupXImage"></div>
+
+                </div>
+              </div>
+            </span>
             <div class="requirementItem popupText">APCS: 5/5</div>
             <div class="requirementItem popupText">CP1: 4/5</div>
             <div class="requirementItem popupText">CP2: 4/5</div>
