added a section for the note and implemented the logo feature.

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -46,7 +46,8 @@
             <div class="periodLogo popupLogo"></div>
             <span class="periodPopupText popupText">PERIOD</span>
           </div>
-          <div class="popupTrash">
+          <div class="popupIcons">
+            <div class="popupNote"></div>
             <div class="popupTrashImage"></div>
           </div>
         </div>
