--- a/pages/view/styles.css
+++ b/pages/view/styles.css
@@ -286,7 +286,7 @@ html {
     flex-wrap: nowrap;
     gap: 10px;
   }
-  .popupTrash{
+  .popupIcons{
     margin-left: auto;
     width: 35px;
     height: 35px;
@@ -294,12 +294,24 @@ html {
     display: flex;
     align-items:end;
   }
+  .popupNote{
+    opacity: 0.7;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    background: url("images/note.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    transition: opacity 0.2s ease;
+    margin-right: -1px;
+  }
   .popupTrashImage{
     opacity: 0.7;
     cursor: pointer;
     width: 18px;
     height: 18px;
-    background: url("images/trash.png");
+    background: url("images/note.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
