Currently working on adding the button for to link to the help/step by step how to use google doc

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -69,6 +69,7 @@
               <div class="viewButton"><span class="viewButtonText">VIEW</span></div>
               <div class="editButton"><span class="editButtonText">EDIT</span></div>
               <div class="prefButton"><span class="prefButtonText">PREFERENCES</span></div>
+              <div class="helpButton"><span class="helpButtonText">HELP</span></div>
             </div>
           </div>
         </div>
