--- a/pages/edit/styles.css
+++ b/pages/edit/styles.css
@@ -367,6 +367,53 @@ html {
     background: var(--bright-gradient-1);
     position: absolute;
   }
+
+  .helpButton {
+    border-bottom: 4px solid var(--bright-1);
+    width: 213px;
+    height: 60px;
+    padding: 15px 25px;
+    margin: 10px;
+    opacity: 1;
+    background: var(--dark-gradient-2);
+    position: relative;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: -2px -2px 10px rgba(255, 255, 255, 0.25),
+                2px 2px 10px rgba(255, 255, 255, 0.15);
+    overflow: hidden;
+    cursor: pointer;
+  }
+
+  .helpButtonText {
+    display: flex;
+    width: 163px;
+    text-decoration: underline;
+    height: 100%;
+    background: var(--bright-gradient-1);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: var(--bright-gradient-1);
+    position: relative;
+    font-family: Inter;
+    font-weight: Bold;
+    letter-spacing: 2px;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .helpButtonText::before {
+    content: " ";
+    width: 100%;
+    height: 3px;
+    bottom: 0px;
+    background: var(--bright-gradient-1);
+    position: absolute;
+  }
+  
   .editColumns{
     padding: 20px;
     gap: 15px;
