--- a/pages/edit/styles.css
+++ b/pages/edit/styles.css
@@ -369,8 +369,9 @@ html {
   }
 
   .helpButton {
+    flex-shrink: 0;
     border-bottom: 4px solid var(--bright-1);
-    width: 213px;
+    width: 110px;
     height: 60px;
     padding: 15px 25px;
     margin: 10px;
@@ -389,7 +390,7 @@ html {
 
   .helpButtonText {
     display: flex;
-    width: 163px;
+    width: 60px;
     text-decoration: underline;
     height: 100%;
     background: var(--bright-gradient-1);
@@ -1755,4 +1756,14 @@ html {
     margin-top: -5px;
     margin-bottom: -5px;
     text-align: center;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .navButtons a {
+    display: inline-block; /* Makes it behave like a block element */
+    flex-shrink: 0; /* Prevents shrinking in flex container */
   }
