Fixed bugs with the help button breaking the CSS in rest of the page

--- a/pages/view/styles.css
+++ b/pages/view/styles.css
@@ -1505,3 +1505,5 @@ html {
     display: inline-block; /* Makes it behave like a block element */
     flex-shrink: 0; /* Prevents shrinking in flex container */
   }
+
+  /*should be done with branch*?
