--- a/pages/preferences/styles.css
+++ b/pages/preferences/styles.css
@@ -366,9 +366,9 @@ html {
     gap: 15px;
     display: flex;
     width: 100%;
-    height: 80%;
+    height: auto;
     z-index: 1;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
   }
   .column{
     padding: 10px;
@@ -378,7 +378,7 @@ html {
     background: var(--og-dark-2);
     border-radius: 20px;
     width: 100%;
-    height: 100%;
+    height: auto;
     box-shadow: var(--box-shadow2);
   }
   .label{
@@ -405,12 +405,12 @@ html {
   .wrapper{
     border-radius: 10px;
     flex-direction: column;
-    overflow: scroll;
+    overflow: visible;
     -ms-overflow-style: none;
     scrollbar-width: none;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
     background: var(--trans-dark-1);
     background-image: radial-gradient(rgba(0,0,0,0.1) 2px, transparent 0);
     background-size: 40px 40px;
@@ -585,7 +585,7 @@ html {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: auto;
     gap: 8px;
   }
 
