added the second semester box

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -78,6 +78,7 @@
           </div>
         </div>
         <div class="mainSection">
+<!-- Scond semester edits starts here\ -->
           <div class="leftContent">
             <div class="scheduleFrame">
               <div class="leftBar">
@@ -124,7 +125,53 @@
                 </div>
               </div>
             </div>
+            <div class="scheduleFrame">
+              <div class="leftBar">
+                <div class="corner">
+                  <div class="uploadDiv">
+                    <div class="uploadIcon"></div>
+                    <input type="file" class="fileUpload" accept=".json"></input>
+                  </div>
+                  <div class="resetDiv">
+                    <div class="resetIcon"></div>
+                  </div>
+                </div>
+                <div class="classBar">
+                  <div class="classDisplay"><span class="classText">114</span></div>
+                  <div class="classDisplay"><span class="classText">115</span></div>
+                  <div class="classDisplay"><span class="classText">116</span></div>
+                  <div class="classDisplay"><span class="classText">117</span></div>
+                  <div class="classDisplay"><span class="classText">119</span></div>
+                  <div class="classDisplay"><span class="classText">120</span></div>
+                  <div class="classDisplay"><span class="classText">121</span></div>
+                  <div class="classDisplay"><span class="classText">123</span></div>
+                  <div class="classDisplay"><span class="classText">126</span></div>
+                  <div class="classDisplay"><span class="classText">128</span></div>
+                  <div class="classDisplay"><span class="classText">129</span></div>
+                  <div class="classDisplay"><span class="classText">130</span></div>
+                  <div class="classDisplay"><span class="classText">132</span></div>
+                  <div class="classDisplay"><span class="classText">134</span></div>
+                  <div class="classDisplay"><span class="classText">138</span></div>
+                  <div class="classDisplay"><span class="classText">139</span></div>
+                </div>
+              </div>
+              <div class="rightBar">
+                <div class="periodBar">
+                  <div class="periodDisplay"><span class="periodText">1</span></div>
+                  <div class="periodDisplay"><span class="periodText">2</span></div>
+                  <div class="periodDisplay"><span class="periodText">3</span></div>
+                  <div class="periodDisplay"><span class="periodText">4</span></div>
+                  <div class="periodDisplay"><span class="periodText">5</span></div>
+                  <div class="periodDisplay"><span class="periodText">6</span></div>
+                  <div class="periodDisplay"><span class="periodText">7</span></div>
+                  <div class="periodDisplay"><span class="periodText">8</span></div>
+                </div>
+                <div class="scheduleBox">
+                </div>
+              </div>
+            </div>
           </div>
+          <!-- Scond semester edits ends here\ -->
           <div class="rightContent">
             <div class="rightFrame">
               <div class="graphFrame">
