Fixed the help button underline issue

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -71,7 +71,7 @@
               <div class="editButton"><span class="editButtonText">EDIT</span></div>
               <div class="prefButton"><span class="prefButtonText">PREFERENCES</span></div>
               <div class="helpButton">
-                <span class="prefButtonText">HELP</span>
+                <span class="helpButtonText">HELP</span>
               </div>
             </div>
           </div>
