--- a/pages/help/styles.css
+++ b/pages/help/styles.css
@@ -484,44 +484,52 @@ html {
     font-size: 18px;
     color: var(--text-color);
   }
-  
-  .helpImagePlaceholder {
-    width: 100%;
-    height: 200px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 2px dashed rgba(255, 255, 255, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Inter, sans-serif;
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.7);
-    text-align: center;
+
+  .helpImage {
+    width: 80%;
+    height: auto;
     margin-top: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), -2px -2px 10px rgba(255, 255, 255, 0.1);
+  }
+
+  .helpImageBullets1 {
+    width: 60%;
+    height: auto;
+    margin-top: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), -2px -2px 10px rgba(255, 255, 255, 0.1);
+  }
+
+  .helpImageBullets2 {
+    width: 40%;
+    height: auto;
+    margin-top: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), -2px -2px 10px rgba(255, 255, 255, 0.1);
   }
 
 
-  /* Scrollbar styling */
-::-webkit-scrollbar {
-  width: 10px;
-}
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
 
-::-webkit-scrollbar-track {
-  background: var(--dark-gradient-2);
-  border-radius: 5px;
-}
+  ::-webkit-scrollbar-track {
+    background: var(--dark-gradient-2);
+    border-radius: 5px;
+  }
 
-::-webkit-scrollbar-thumb {
-  background: var(--bright-1);
-  border-radius: 5px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-}
+  ::-webkit-scrollbar-thumb {
+    background: var(--bright-1);
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  background: var(--highlight-gradient-1);
-}
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--highlight-gradient-1);
+  }
 
-.scrollable {
-  scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: var(--bright-1) var(--dark-gradient-2); /* Thumb and track colors */
-}
+  .scrollable {
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: var(--bright-1) var(--dark-gradient-2); /* Thumb and track colors */
+  }
