added semester 2 schedule and set it to populate using data 2 but location and amount still needs to be fixed in script.js file.

--- a/pages/view/index.html
+++ b/pages/view/index.html
@@ -78,9 +78,9 @@
           </div>
         </div>
         <div class="mainSection">
-<!-- Scond semester edits starts here\ -->
+<!-- Semester edits starts here\ -->
           <div class="leftContent">
-            <div class="scheduleFrame">
+            <div class="scheduleFrame2">
               <div class="leftBar">
                 <div class="corner">
                   <div class="uploadDiv">
@@ -125,7 +125,8 @@
                 </div>
               </div>
             </div>
-            <div class="scheduleFrame">
+<!-- Second semester edits start here\ -->
+            <div class="scheduleFrame2">
               <div class="leftBar">
                 <div class="corner">
                   <div class="uploadDiv">
@@ -136,37 +137,37 @@
                     <div class="resetIcon"></div>
                   </div>
                 </div>
-                <div class="classBar">
-                  <div class="classDisplay"><span class="classText">114</span></div>
-                  <div class="classDisplay"><span class="classText">115</span></div>
-                  <div class="classDisplay"><span class="classText">116</span></div>
-                  <div class="classDisplay"><span class="classText">117</span></div>
-                  <div class="classDisplay"><span class="classText">119</span></div>
-                  <div class="classDisplay"><span class="classText">120</span></div>
-                  <div class="classDisplay"><span class="classText">121</span></div>
-                  <div class="classDisplay"><span class="classText">123</span></div>
-                  <div class="classDisplay"><span class="classText">126</span></div>
-                  <div class="classDisplay"><span class="classText">128</span></div>
-                  <div class="classDisplay"><span class="classText">129</span></div>
-                  <div class="classDisplay"><span class="classText">130</span></div>
-                  <div class="classDisplay"><span class="classText">132</span></div>
-                  <div class="classDisplay"><span class="classText">134</span></div>
-                  <div class="classDisplay"><span class="classText">138</span></div>
-                  <div class="classDisplay"><span class="classText">139</span></div>
+                <div class="classBar2">
+                  <div class="classDisplay2"><span class="classText">114</span></div>
+                  <div class="classDisplay2"><span class="classText">115</span></div>
+                  <div class="classDisplay2"><span class="classText">116</span></div>
+                  <div class="classDisplay2"><span class="classText">117</span></div>
+                  <div class="classDisplay2"><span class="classText">119</span></div>
+                  <div class="classDisplay2"><span class="classText">120</span></div>
+                  <div class="classDisplay2"><span class="classText">121</span></div>
+                  <div class="classDisplay2"><span class="classText">123</span></div>
+                  <div class="classDisplay2"><span class="classText">126</span></div>
+                  <div class="classDisplay2"><span class="classText">128</span></div>
+                  <div class="classDisplay2"><span class="classText">129</span></div>
+                  <div class="classDisplay2"><span class="classText">130</span></div>
+                  <div class="classDisplay2"><span class="classText">132</span></div>
+                  <div class="classDisplay2"><span class="classText">134</span></div>
+                  <div class="classDisplay2"><span class="classText">138</span></div>
+                  <div class="classDisplay2"><span class="classText">139</span></div>
                 </div>
               </div>
-              <div class="rightBar">
+              <div class="rightBar2">
                 <div class="periodBar">
-                  <div class="periodDisplay"><span class="periodText">1</span></div>
-                  <div class="periodDisplay"><span class="periodText">2</span></div>
-                  <div class="periodDisplay"><span class="periodText">3</span></div>
-                  <div class="periodDisplay"><span class="periodText">4</span></div>
-                  <div class="periodDisplay"><span class="periodText">5</span></div>
-                  <div class="periodDisplay"><span class="periodText">6</span></div>
-                  <div class="periodDisplay"><span class="periodText">7</span></div>
-                  <div class="periodDisplay"><span class="periodText">8</span></div>
+                  <div class="periodDisplay2"><span class="periodText">1</span></div>
+                  <div class="periodDisplay2"><span class="periodText">2</span></div>
+                  <div class="periodDisplay2"><span class="periodText">3</span></div>
+                  <div class="periodDisplay2"><span class="periodText">4</span></div>
+                  <div class="periodDisplay2"><span class="periodText">5</span></div>
+                  <div class="periodDisplay2"><span class="periodText">6</span></div>
+                  <div class="periodDisplay2"><span class="periodText">7</span></div>
+                  <div class="periodDisplay2"><span class="periodText">8</span></div>
                 </div>
-                <div class="scheduleBox">
+                <div class="scheduleBox2">
                 </div>
               </div>
             </div>
