--- a/pages/view/styles.css
+++ b/pages/view/styles.css
@@ -832,7 +832,7 @@ html {
     position: relative;
     overflow: visible;
   }
-  .scheduleFrame {
+  .scheduleFrame, scheduleFrame2 {
     display: flex;
     width: 100%;
     height: 100%;
@@ -878,7 +878,7 @@ html {
     box-shadow: var(--box-shadow2);
     overflow: hidden;
   }
-  .classDisplay {
+  .classDisplay, .classDisplay2 {
     display: flex;
     flex: 1 1;
     width: 100%;
@@ -932,7 +932,7 @@ html {
     box-shadow: var(--box-shadow2);
     overflow: hidden;
   }
-  .periodDisplay {
+  .periodDisplay, .periodDisplay2{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -954,7 +954,7 @@ html {
     opacity: 1;
     text-align: center;
   }
-  .scheduleBox {
+  .scheduleBox, .scheduleBox2 {
     border-radius: 5px;
     flex-wrap: wrap;
     display: flex;
